# LabProgrammazione

./: .gitignore  CMakeLists.txt  Calendar.cpp  Calendar.h  Data.cpp  Data.h  Interface.cpp  Interface.h  Task.cpp  Task.h  ToDoList.cpp  ToDoList.h  Utility.cpp  Utility.h  main.cpp  todo list.json
.github/workflows/: qodana_code_quality.yml
googletest-main/: CMakeLists.txt  TestCalendar.cpp  TestData.cpp  TestInterface.cpp  TestTask.cpp  TestToDoList.cpp  TestUtility.cpp  test1.cpp
